--- a/luigi.cfg
+++ b/luigi.cfg
@@ -4,6 +4,9 @@ default-scheduler-port=8082
 default-scheduler-url=http://pipeline:8082
 log_level=WARNING
 
+[worker]
+task_process_context=""
+
 [scheduler]
 record_task_history=True
 state_path=/opt/pipeline/luigi-state.pickle
