--- a/luigi.cfg
+++ b/luigi.cfg
@@ -2,7 +2,7 @@
 default-scheduler-host=pipeline
 default-scheduler-port=8082
 default-scheduler-url=http://pipeline:8082
-log_level=WARNING
+log_level=INFO
 
 [scheduler]
 record_task_history=True
